--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,9 @@ db.default.url="jdbc:h2:mem:play"
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+play -DapplyEvolutions.default=true run
+play -DapplyEvolutions.default=true start
+./target/start -DapplyEvolutions.default=true
 
 # Logger
 # ~~~~~
